# max_dist_diff

./: .gitignore  CMakeLists.txt  README.md  run_filters.sh
dat/: synthetic.pgm
include/: BasicAttributeComputer.hpp  InertiaComputer.hpp  MaxDistComputer.hpp  NonDiffMaxDistComputer.hpp  UltimateAttributeOpening.hpp  edt.hpp  edt_diff.hpp
runtime-analysis/: gen_csv.py  run_gen_csv.sh  runtime.csv
runtime-analysis/csv/: runtime_00.csv  runtime_01.csv  runtime_02.csv  runtime_03.csv  runtime_04.csv  runtime_05.csv  runtime_06.csv  runtime_07.csv  runtime_08.csv  runtime_09.csv  runtime_10.csv  runtime_dn_01.csv  runtime_dn_02.csv  runtime_dn_03.csv  runtime_dn_04.csv  runtime_dn_05.csv  runtime_nd_01.csv  runtime_nd_02.csv  runtime_nd_03.csv  runtime_nd_04.csv  runtime_nd_05.csv
runtime-dataset/carlinet-14-itip/: frog.pgm  house.pgm  mountain.pgm  naturel.pgm  sat.pgm  washsat.pgm
src/: BasicAttributeComputer.cpp  InertiaComputer.cpp  MaxDistComputer.cpp  NonDiffMaxDistComputer.cpp  UltimateAttributeOpening.cpp  basic_attr_disp.cpp  check_implementations.cpp  diff_max_dist_runtime.cpp  direct_filter.cpp  dtmt.cpp  dtmt_diff.cpp  extinction_filter_area.cpp  extinction_filter_height.cpp  extinction_filter_inertia.cpp  extinction_filter_max_dist.cpp  extinction_filter_volume.cpp  max_dist_attr.cpp  max_dist_attr_disp.cpp  max_dist_extiction_values.cpp  non_diff_max_dist_runtime.cpp  ultimate_maxDist_open.cpp
